<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/drawer_user_not_logged_in_group"
        android:checkableBehavior="none">
        <item
            android:title="@string/not_logged_in_menu">
            <menu>
                <group android:checkableBehavior="none">
                    <item
                        android:id="@+id/btn_login_drawer"
                        android:icon="@drawable/ic_noun_login"
                        android:title="@string/login" />
                    <item
                        android:id="@+id/btn_register_drawer"
                        android:icon="@drawable/ic_noun_sign_up"
                        android:title="@string/register" />
                </group>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/intercity"
        android:checkableBehavior="single">
        <item android:title="@string/intercity_travel">
            <menu>
                <group
                    android:checkableBehavior="single"
                    android:menuCategory="container">
                    <item
                        android:id="@+id/drawer_register_intercity"
                        android:icon="@drawable/ic_noun_road"
                        android:title="@string/register_intercity_travel" />
                    <item
                        android:id="@+id/drawer_find_intercity"
                        android:icon="@drawable/ic_noun_thumbs_up"
                        android:title="@string/find_intercity_travel" />
                </group>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/urban"
        android:checkableBehavior="single">
        <item android:title="@string/urban">
            <menu>
                <group
                    android:checkableBehavior="single"
                    android:menuCategory="container">
                    <item
                        android:id="@+id/register_urban"
                        android:icon="@drawable/ic_noun_urban"
                        android:title="@string/register_urban_travel" />
                    <item
                        android:id="@+id/find_urban"
                        android:icon="@drawable/ic_noun_travel_together"
                        android:title="@string/find_urban_travel" />
                </group>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/drawer_user_logged_in_group"
        android:checkableBehavior="single">
        <item android:title="@string/account">
            <menu>
                <group
                    android:checkableBehavior="single"
                    android:menuCategory="container">
                    <item
                        android:id="@+id/edit_profile"
                        android:icon="@drawable/ic_profile"
                        android:title="@string/navigation_my_profile" />
                    <item
                        android:id="@+id/btn_sign_out"
                        android:icon="@drawable/ic_logout"
                        android:title="@string/sign_out" />
                </group>
            </menu>
        </item>
    </group>
</menu>