<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:paddingRight="6dp"
        android:text="@string/not_logged_in"
        android:textColor="@color/colorWhite"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_register"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textAppearance="@style/NavigationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:padding="0dp"
        android:text="@string/register_button"
        android:textColor="@color/colorFontOverActionbar"
        android:textSize="@dimen/actionbarButtonFontSize"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/or_word"
        android:textColor="@color/colorWhite"
        android:textSize="13sp" />


    <Button
        android:id="@+id/btn_login"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textAppearance="@style/NavigationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:padding="0dp"
        android:text="@string/login_button"
        android:textColor="@color/colorFontOverActionbar"
        android:textSize="@dimen/actionbarButtonFontSize"
        android:textStyle="bold" />

</LinearLayout>